[package]
name = "whoop"
version = "0.1.0"
edition = "2021"
description = "A simple and blazingly fast CORS proxy"
license = "GPL-3.0-or-later"
repository = "https://github.com/TheBotlyNoob/whoop"
keywords = ["cors", "proxy", "http", "https"]
categories = ["network-programming", "http", "https", "proxy", "cors"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
shuttle-runtime = "0.27.0"
shuttle-tower = "0.27.0"
tower = { version = "0.4.13", features = ["full"] }
hyper-tls = "0.5.0"


[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
